k8s/blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      slot: prd
      app: go-app
  template:
    metadata:
      labels:
        slot: prd
        app: go-app
    spec:
      containers:
      - name: blue
        image: luizmandico/blue_green:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        readinessProbe:
          httpGet:
            path: /go-demo/health
            port: 8888
        ports:
        - name: http
          containerPort: 8888
