k8s/green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-green
spec:
  replicas: 1
  selector:
    matchLabels:
      slot: stage
      app: go-app
  template:
    metadata:
      labels:
        slot: stage
        app: go-app
    spec:
      containers:
      - name: green
        image: luizmandico/blue_green:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /go-demo/health
            port: 8888
        ports:
        - name: http
          containerPort: 8888
