k8s/svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb
spec:
  selector:
    app: go-app
  ports:
  - port: 8080
    targetPort: 8080
