k8s/svc-prd.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-demo-prd
spec:
  selector:
    slot: green
    app: go-app
  ports:
  - port: 8888
    targetPort: 8888
